Adaptations to make the plugin compatible with Windows